--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,28 @@
-            - name: kustomize-automation
-  # You may pin to the exact commit or the version.
-  # uses: devjoes/kustomize-action@2a1f896ada4a72d96abde74e24ee06eb7a76bcb5
-  uses: devjoes/kustomize-action@v0.1.3
-  with:
-    # Path to directory containing root kustomization.yaml. Relative to repo root.
-    kustomize-path: # default is ./
-    # Array of actions to take with the generated YAML. Currently the options are:\n{"type":"LoggerOutputAction","logErrors":true,"logYaml":true}\n{"type":"VariableOutputAction","outputVariableName":"thisIsAVariableInGitWorkflow","errorsVariableName":undefined}\n{"type":"FileOutputAction","createDirIfMissing":true,"fileOpenFlags":"w","errorsFileName":"$GITHUB_WORKSPACE/errors.yml","yamlFileName":"$GITHUB_WORKSPACE/output.yml"}\n{"type":"ArtifactOutputAction","name":"my-artifact","errorsFileName":"errors.yml","yamlFileName":"output.yml"}
-    output-actions: # default is [{"type":"LoggerOutputAction","logErrors":true,"logYaml":false},{"type":"VariableOutputAction","outputVariableName":"yaml","errorsVariableName":"errors"},{"type":"FileOutputAction","createDirIfMissing":true,"errorsFileName":"$GITHUB_WORKSPACE/errors.yml","yamlFileName":"$GITHUB_WORKSPACE/output.yml"},{"type":"ArtifactOutputAction","name":"my-artifact","errorsFileName":"errors.yml","yamlFileName":"output.yml"}]
-    # Comma separated list of additional .yaml files to reference when running kustomize. E.g. if you have dev and test on the same cluster then you would want to include dev's YAML when building test or vice versa.
-    extra-resources: # optional
-    # Comma separated list of "namespace/secret" pairs that we allow to exist in the YAML.
-    allowed-secrets: # optional
-    # Newline separated list of "error message|required/forbidden|/regex/" e.g. "Dont commit passwords|false|/password|key/i\nOwner must exist|true|/owner:/i".
-    custom-validation-rules: # optional
-    # Comma separated list of binaries to check for on start up.
-    required-bins: # optional, default is kustomize,kubeval,helm
-    # Output detailed logging
-    verbose: # optional
-    # Validates the YAML against schemas with kubeval
-    validate-with-kubeval: # optional, default is true
-    # Arguments to run kustomize with
-    kustomize-args: # optional, default is --enable_alpha_plugins
-          
+---
+            - name: Upload a Build Artifact
+              uses: actions/upload-artifact@v4.6.1
+with:
+    # Artifact name
+    name: # optional, default is artifact
+    # A file, directory or wildcard pattern that describes what to upload
+    path: 
+    # The desired behavior if no files are found using the provided path.
+Available Options:
+  warn: Output a warning but do not fail the action
+  error: Fail the action with an error message
+  ignore: Do not output any warnings or errors, the action does not fail
+
+    if-no-files-found: # optional, default is warn
+    # Duration after which artifact will expire in days. 0 means using default retention.
+Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+
+    retention-days: # optional
+    # The level of compression for Zlib to be applied to the artifact archive. The value can range from 0 to 9: - 0: No compression - 1: Best speed - 6: Default compression (same as GNU Gzip) - 9: Best compression Higher levels will result in better compression, but will take longer to complete. For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+
+    compression-level: # optional, default is 6
+    # If true, an artifact with a matching name will be deleted before a new one is uploaded. If false, the action will fail if an artifact for the given name already exists. Does not fail if the artifact does not exist.
+
+    overwrite: # optional, default is false
+    # If true, hidden files will be included in the artifact. If false, hidden files will be excluded from the artifact.
+
+    include-hidden-files: # optional, default is false
